Add official build support

--- a/eng/pipelines/linux.yml
+++ b/eng/pipelines/linux.yml
@@ -1,17 +1,22 @@
 # Linux legs
+parameters:
+  # Required: value to specify if the job is comming from an official build to run extra steps and sign binaries
+  #   Default: false
+  isOfficialBuild: false
+
 jobs:
 
 - template: corefx-base.yml
   parameters:
+    isOfficialBuild: ${{ parameters.isOfficialBuild }}
     targetOS: Linux
     jobs:
 
     # Legs with Helix testing
-    - job: LinuxHelix
+    - job: LinuxTest
       displayName: Linux
       strategy:
         matrix:
-          # netcoreapp linux x64 release
           x64_Release:
             _configuration: Release
             _architecture: x64
@@ -20,7 +25,6 @@ jobs:
             _dockerContainer: rhel7_container
             _buildScriptPrefix: ''
 
-          # netcoreapp linux arm64 release
           arm64_Release:
             _configuration: Release
             _architecture: arm64
@@ -41,19 +45,44 @@ jobs:
           value: true
 
         - name: _outerloop
-          value: false
+          value: ${{ parameters.isOfficialBuild }}
 
-        - name: linuxDefaultQueues
-          value: Centos.7.Amd64.Open+RedHat.7.Amd64.Open+Debian.8.Amd64.Open+Ubuntu.1604.Amd64.Open+Ubuntu.1804.Amd64.Open+OpenSuse.42.Amd64.Open+Fedora.27.Amd64.Open
-        - name: linuxArm64Queues
-          value: Ubuntu.1604.Arm64.Open
+        - ${{ if eq(parameters.isOfficialBuild, 'false') }}:
+          - name: linuxDefaultQueues
+            value: Centos.7.Amd64.Open+RedHat.7.Amd64.Open+Debian.8.Amd64.Open+Ubuntu.1604.Amd64.Open+Ubuntu.1804.Amd64.Open+OpenSuse.42.Amd64.Open+Fedora.27.Amd64.Open
+          - name: linuxArm64Queues
+            value: Ubuntu.1604.Arm64.Open
+      
+        - ${{ if eq(parameters.isOfficialBuild, 'true') }}:
+          - name: linuxDefaultQueues
+            value: Centos.7.Amd64+RedHat.7.Amd64+Debian.8.Amd64+Debian.9.Amd64+Ubuntu.1604.Amd64+Ubuntu.1804.Amd64+Ubuntu.1810.Amd64+OpenSuse.42.Amd64+SLES.12.Amd64+SLES.15.Amd64+Fedora.27.Amd64+Fedora.28.Amd64
+          - name: linuxArm64Queues
+            value: Ubuntu.1604.Arm64
 
-    # Linux arm leg -- TODO: move to LinuxNoHelix once Hosted Ubuntu 1604 can be used.
-    - job: LinuxArm32
+    # Legs without helix testing
+    - job: LinuxNoTest
       displayName: Linux
       strategy:
         matrix:
-          arm32_Release:
+          ${{ if eq(parameters.isOfficialBuild, 'false') }}:
+            musl_x64_Debug:
+              _configuration: Debug
+              _architecture: x64
+              _framework: netcoreapp
+              _dockerContainer: alpine_36_container
+              _buildScriptPrefix: ''
+              _buildExtraArguments: /p:RuntimeOS=linux-musl /p:PortableBuild=false
+
+          ${{ if eq(parameters.isOfficialBuild, 'true') }}:
+            musl_x64_Release:
+              _configuration: Release
+              _architecture: x64
+              _framework: netcoreapp
+              _dockerContainer: alpine_36_container
+              _buildScriptPrefix: ''
+              _buildExtraArguments: /p:RuntimeOS=linux-musl /p:PortableBuild=false
+
+          arm_Release:
             _configuration: Release
             _architecture: arm
             _framework: netcoreapp
@@ -74,32 +103,4 @@ jobs:
           value: true
 
         - name: _outerloop
-          value: false
-
-    # Legs without helix testing
-    - job: LinuxNoHelix
-      displayName: Linux
-      strategy:
-        matrix:
-          # linux-musl x64 debug
-          musl_x64_Debug:
-            _configuration: Debug
-            _architecture: x64
-            _framework: netcoreapp
-            _dockerContainer: alpine_36_container
-            _buildExtraArguments: /p:RuntimeOS=linux-musl /p:PortableBuild=false
-
-      pool:
-        name: Default # TODO: update to Hosted Ubuntu 1604 once bring your own node is available and merge with Linux ARM job
-
-      targetOS: Linux
-      container: $[ variables['_dockerContainer'] ]
-      buildExtraArguments: $(_buildExtraArguments)
-      submitToHelix: false
-
-      variables:
-        - name: _skipTests
-          value: true
-
-        - name: _outerloop
-          value: false
+          value: ${{ parameters.isOfficialBuild }}
