--- a/.azure-ci.yml
+++ b/.azure-ci.yml
@@ -10,8 +10,11 @@ resources:
   - container: rhel7_container
     image: microsoft/dotnet-buildtools-prereqs:rhel7_prereqs_2
 
+  - container: rhel6_container
+    image: microsoft/dotnet-buildtools-prereqs:centos-6-376e1a3-20174311014331
+
   - container: alpine_36_container
-    image: microsoft/dotnet-buildtools-prereqs:alpine-3.6-WithNode-dc92048-20181204212646
+    image: microsoft/dotnet-buildtools-prereqs:alpine-3.6-WithNode-f4d3fe3-20181213005010
 
   - container: ubuntu_1604_arm64_cross_container
     image: microsoft/dotnet-buildtools-prereqs:ubuntu-16.04-cross-arm64-a3ae44b-20180315221921
@@ -19,12 +22,37 @@ resources:
   - container: ubuntu_1604_arm_cross_container
     image: microsoft/dotnet-buildtools-prereqs:ubuntu-16.04-cross-ef0ac75-20175511035548
 
+variables:
+  - name: _windowsOfficialBuildArguments
+    ${{ if and(ne(variables['System.TeamProject'], 'public'), notIn(variables['Build.Reason'], 'PullRequest')) }}:
+      value: -sign /p:DotNetSignType=$(_SignType) # /p:EnableProfileGuidedOptimization=true
+      
+    ${{ if and(eq(variables['System.TeamProject'], 'public'), in(variables['Build.Reason'], 'PullRequest')) }}:
+      value: ''
+
 jobs:
   # Windows legs
   - template: /eng/pipelines/windows.yml
+    ${{ if and(ne(variables['System.TeamProject'], 'public'), notIn(variables['Build.Reason'], 'PullRequest')) }}:
+      parameters:
+        isOfficialBuild: true
 
   # Linux legs
   - template: /eng/pipelines/linux.yml
+    ${{ if and(ne(variables['System.TeamProject'], 'public'), notIn(variables['Build.Reason'], 'PullRequest')) }}:
+      parameters:
+        isOfficialBuild: true
 
   # MacOS legs
   - template: /eng/pipelines/macos.yml
+    ${{ if and(ne(variables['System.TeamProject'], 'public'), notIn(variables['Build.Reason'], 'PullRequest')) }}:
+      parameters:
+        isOfficialBuild: true
+
+  # Only run in official builds
+  - ${{ if and(ne(variables['System.TeamProject'], 'public'), notIn(variables['Build.Reason'], 'PullRequest')) }}:
+    # Publish step
+    - template: /eng/pipelines/publish.yml
+
+    # Redhat6 leg is only for official builds
+    - template: /eng/pipelines/redhat6.yml
