--- a/eng/pipelines/macos.yml
+++ b/eng/pipelines/macos.yml
@@ -1,8 +1,14 @@
 # macOS legs
+parameters:
+  # Required: value to specify if the job is comming from an official build to run extra steps and sign binaries
+  #   Default: false
+  isOfficialBuild: false
+
 jobs:
 
 - template: corefx-base.yml
   parameters:
+    isOfficialBuild: ${{ parameters.isOfficialBuild }}
     targetOS: OSX
     jobs:
 
@@ -11,11 +17,19 @@ jobs:
       displayName: MacOS
       strategy:
         matrix:
-          x64_Debug:
-            _configuration: Debug
-            _architecture: x64
-            _framework: netcoreapp
-            _helixQueues: $(macOSQueues)
+          ${{ if eq(parameters.isOfficialBuild, 'false') }}:
+            x64_Debug:
+              _configuration: Debug
+              _architecture: x64
+              _framework: netcoreapp
+              _helixQueues: $(macOSQueues)
+
+          ${{ if eq(parameters.isOfficialBuild, 'true') }}:
+            x64_Release:
+              _configuration: Release
+              _architecture: x64
+              _framework: netcoreapp
+              _helixQueues: $(macOSQueues)
 
       pool:
         name: Hosted Mac Internal Sierra
@@ -35,7 +49,12 @@ jobs:
           value: true
 
         - name: _outerloop
-          value: false
+          value: ${{ parameters.isOfficialBuild }}
 
-        - name: macOSQueues
-          value: OSX.1012.Amd64.Open+OSX.1013.Amd64.Open
+        - ${{ if eq(parameters.isOfficialBuild, 'false') }}:
+          - name: macOSQueues
+            value: OSX.1012.Amd64.Open+OSX.1013.Amd64.Open
+
+        - ${{ if eq(parameters.isOfficialBuild, 'true') }}:
+          - name: macOSQueues
+            value: OSX.1012.Amd64+OSX.1013.Amd64+OSX.1014.Amd64
